src/main/k8s/k8s-deployment-1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry-service-1
  namespace: pizza
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry-service-1
    spec:
      containers:
      - name: registry-service-1
        image: iancollington/bootifulmicropizza_registry-service
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.25"
            memory: 1024Mi
          limits:
            cpu: "1"
            memory: 1280Mi
        ports:
        - containerPort: 8761
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 120
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 30
          timeoutSeconds: 5
