src/main/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service-1
  namespace: pizza
  labels:
    app: registry-service-1
  annotations:
    prometheus.io/path: /actuator/prometheus                                                                                                                                                                                                                                 │
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  ports:
  - name: http
    port: 8761
    targetPort: 8761
    protocol: TCP
  selector:
    app: registry-service-1
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service-2
  namespace: pizza
  labels:
    app: registry-service-2
spec:
  type: NodePort
  ports:
  - name: http
    port: 8762
    targetPort: 8762
    protocol: TCP
  selector:
    app: registry-service-2
